<resources>
    <string name="app_name">Trainer</string>
    <string name="dia_mes_ano">dia/mês/ano</string>
    <string name="registrar">Registrar</string>
    <string name="altura">Altura</string>
    <string name="peso">Peso</string>
    <string name="telefone">Telefone</string>
    <string name="ainda_nao_tem_classifica_oes">ainda nao tem classificaçoes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="conta">Conta</string>
    <string name="sair">Sair</string>
    <string name="palavra_passe">Palavra-passe:</string>
    <string name="selecione_com_muita_responsabilidade">Selecione com muita responsabilidade</string>
    <string name="proximo_passo">proximo passo</string>

    <string-array name="horas_array">
        <item>00:30</item>
        <item>01:00</item>
        <item>01:30</item>
        <item>02:00</item>
        <item>02:30</item>
        <item>03:00</item>

    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="comentetario">comentetario:</string>
    <string name="e_mail">E-mail:</string>
    <string name="title_activity_actity_para_login">ActityParaLogin</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="rating">rating</string>
    <string name="preco">preço</string>
    <string name="ordenar_por">Ordenar por:</string>

    <string name="transition_image">image %d</string>
    <string name="transition_name">name %d</string>
    <string name="trainer">Trainer</string>
    <string name="nascimento">Nascimento</string>
    <string name="altura_ex_1_8">Altura. Ex:1.8</string>
    <string name="ainda_n_o_ha_nada_por_aqui">Ainda não ha nada por aqui</string>
    <string name="historico">Historico</string>
    <string name="pendentes">Pendentes</string>
    <string name="aceites">Aceites</string>
    <string name="pagas">Pagas</string>
    <string name="morada">Morada</string>
    <string name="detalhes_do_cliente">Detalhes do cliente</string>
    <string name="fotografia">Fotografia</string>
    <string name="genero">gênero</string>

</resources>
