<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityRegistro2">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/img_foto"
        app:civ_border_color="@color/colorPrimary"
        app:civ_border_width="2dp"
        android:layout_marginTop="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_selected_foto"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="5dp"
        android:text="Fotografia"
        android:textColor="#ffffff"
        android:background="@drawable/round_button"
        android:gravity="center_vertical|center_horizontal"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="?android:attr/borderlessButtonStyle"/>



    <EditText
        android:id="@+id/edit_usarname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/btn_selected_foto"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tv_usarname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="Nome: "
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/btn_selected_foto"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:padding="8dp"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/edit_usarname"
        app:layout_constraintStart_toStartOf="@+id/edit_usarname"
        app:layout_constraintTop_toBottomOf="@+id/edit_usarname" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="Email: "
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="@+id/tv_usarname"
        app:layout_constraintEnd_toEndOf="@+id/tv_usarname"

        app:layout_constraintTop_toBottomOf="@+id/edit_usarname" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/edit_email"
        app:layout_constraintStart_toStartOf="@+id/edit_email"
        app:layout_constraintTop_toBottomOf="@+id/edit_email" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="palavra passe:"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="@+id/tv_usarname"
        app:layout_constraintEnd_toEndOf="@+id/tv_usarname"
        app:layout_constraintTop_toBottomOf="@+id/tv_email" />

    <EditText
        android:id="@+id/edit_telefone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/telefone"
        android:inputType="phone"
        android:padding="8dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/edit_email"
        app:layout_constraintStart_toStartOf="@+id/edit_email"
        app:layout_constraintTop_toBottomOf="@+id/edit_password" />


    <TextView
        android:id="@+id/tv_telefone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="Nº"
        android:padding="8dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tv_usarname"
        app:layout_constraintEnd_toEndOf="@+id/tv_usarname"
        app:layout_constraintTop_toBottomOf="@+id/tv_password" />

    <Button
        android:id="@+id/edit_data"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:textSize="20sp"
        android:hint="@string/dia_mes_ano"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="@+id/edit_email"
        app:layout_constraintStart_toStartOf="@+id/edit_email"
        app:layout_constraintTop_toBottomOf="@+id/edit_telefone"
        />

    <EditText
        android:id="@+id/edit_altura"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:textSize="20sp"
        android:hint="@string/altura"
        android:inputType="numberDecimal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="@+id/edit_email"
        app:layout_constraintStart_toStartOf="@+id/edit_email"
        app:layout_constraintTop_toBottomOf="@+id/edit_data" />

    <TextView
        android:id="@+id/tv_altura"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="20sp"
        android:text="Altura:"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="@+id/tv_usarname"
        app:layout_constraintEnd_toEndOf="@+id/tv_usarname"
        app:layout_constraintTop_toBottomOf="@+id/edit_data" />

    <EditText
        android:id="@+id/edit_peso"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        android:hint="@string/peso"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="@+id/edit_email"
        app:layout_constraintStart_toStartOf="@+id/edit_email"
        app:layout_constraintTop_toBottomOf="@+id/edit_altura" />

    <TextView
        android:id="@+id/tv_peso"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:textSize="20sp"
        android:text="Peso: "
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="@+id/tv_usarname"
        app:layout_constraintEnd_toEndOf="@+id/tv_usarname"
        app:layout_constraintTop_toBottomOf="@+id/edit_altura" />

    <Button
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/registrar"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/edit_peso"
        app:layout_constraintStart_toStartOf="@+id/edit_peso"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <ProgressBar
        android:id="@+id/progressbar_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>